--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@langchain/openai": "^0.5.4",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "openai": "^4.91.1"
+    "openai": "^4.91.1",
+    "zod": "^3.24.3"
   }
 }
