--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@langchain/core": "^0.3.43",
     "@langchain/deepseek": "^0.0.1",
     "@langchain/openai": "^0.5.4",
+    "cheerio": "^1.0.0",
+    "chromadb": "^2.3.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.24",
     "openai": "^4.91.1",
+    "pdf-parse": "^1.1.1",
     "zod": "^3.24.3"
   }
 }
